--- a/.config/sway/config
+++ b/.config/sway/config
@@ -240,3 +240,9 @@ input type:keyboard xkb_numlock enabled
 # Autotiling (autotiling need to be installed)
 exec --no-startup-id autotiling
 
+# Lock session and turn off screen after some time.
+exec swayidle -w \
+    timeout 300 'swaylock -f -c 000000' \
+    timeout 305 'swaymsg "output * power off"' \
+        resume 'swaymsg "output * power on"'
+
