--- a/.config/sway/config
+++ b/.config/sway/config
@@ -216,7 +216,8 @@ bar {
 
     # When the status_command prints a new line to stdout, swaybar updates.
     # The default just shows the current date and time.
-    status_command while date +'%Y-%m-%d %X'; do sleep 1; done
+    # status_command while date +'%Y-%m-%d %X'; do sleep 1; done
+    status_command scripts/status
 
     colors {
         statusline #ffffff
