--- a/.config/sway/config
+++ b/.config/sway/config
@@ -253,9 +253,9 @@ exec --no-startup-id autotiling
 
 # Lock session and turn off screen after some time.
 exec swayidle -w \
-    timeout 600 'swaylock -f -c 000000' \
-    timeout 605 'swaymsg "output * power off"' \
-        resume 'swaymsg "output * power on"'
+    timeout 600 'swaymsg "output * power off"' \
+        resume 'swaymsg "output * power on"' \
+    timeout 900 'swaylock -f -c 000000'
 
 # Touchpad settings
 input type:touchpad {
