--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -11,6 +11,8 @@
 # italic_font      auto
 # bold_italic_font auto
 
+font_family Noto Sans Mono
+
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. The easiest way to select fonts is to run the `kitten
 #: choose-fonts` command which will present a nice UI for you to
